[package]
name = "meow-sbi"
version = "0.1.0"
authors = ["Liu Xiaoyi <circuitcoder0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = "0.5.6"
fdt = "0.0.1"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[features]
default = []
payload = []
